forgot to add the email secrets to the environment

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -19,3 +19,5 @@ jobs:
         run: python scrape.py
         env:
           SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
+          FROM_EMAIL: ${{ secrets.FROM_EMAIL }}
+          TO_EMAIL: ${{ secrets.TO_EMAIL }}
